--- a/features.html
+++ b/features.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="./style.css">
 
     <!-- icons link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -19,14 +19,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid pe-4 ps-4">
-          <a class="navbar-brand" href="#"> <img src="../static/icon-1.png" class="img-fluid img-nav-edit" alt="">CryptoCoin</a>
+          <a class="navbar-brand" href="#"> <img src="./icon-1.png" class="img-fluid img-nav-edit" alt="">CryptoCoin</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto gap-3 mb-2 mb-lg-0">
               <li class="nav-item ">
-                <a class="nav-link active" aria-current="page" href="ninestars.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
 
               <li class="nav-item">
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-6 col-12" id="about-section-1-c2">
 
-                    <img src="../static/hero-2.png" class="img-fluid" alt="">
+                    <img src="./hero-2.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -96,7 +96,7 @@
 
             <div class="col-lg-4 col-md-6 col-12 edit-col">
 
-              <img src="../static/icon-7.png" class="img-fluid features-img-edit" alt="">
+              <img src="./icon-7.png" class="img-fluid features-img-edit" alt="">
               <div class="ps-4 ps-4-2">
                 <h5>Easy To Start</h5>
                 <p>Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
@@ -104,7 +104,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-12 edit-col">
 
-              <img src="../static/icon-6.png" class="img-fluid features-img-edit" alt="">
+              <img src="./icon-6.png" class="img-fluid features-img-edit" alt="">
 
               <div class="ps-4 ps-4-2">
                 <h5>Safe & Secure</h5>
@@ -113,7 +113,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-12 edit-col">
 
-              <img src="../static/icon-5.png" class="img-fluid features-img-edit features-img-edit-3" alt="">
+              <img src="./icon-5.png" class="img-fluid features-img-edit features-img-edit-3" alt="">
 
               <div class="ps-4 ps-4-2 ps-4-3">
                 <h5>Affordable Plans</h5>
@@ -122,7 +122,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-12 edit-col">
 
-              <img src="../static/icon-4.png" class="img-fluid features-img-edit-4 features-img-edit-5" alt="">
+              <img src="./icon-4.png" class="img-fluid features-img-edit-4 features-img-edit-5" alt="">
 
               <div class="ps-4 ps-4-1 ps-4-5">
                 <h5>Secure Storage</h5>
@@ -131,7 +131,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-12 edit-col">
 
-              <img src="../static/icon-3.png" class="img-fluid features-img-edit-4" alt="">
+              <img src="./icon-3.png" class="img-fluid features-img-edit-4" alt="">
 
               <div class="ps-4 ps-4-1">
                 <h5>Protacted By Insurance</h5>
@@ -140,7 +140,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-12 edit-col">
 
-              <img src="../static/icon-8.png" class="img-fluid features-img-edit-4" alt="">
+              <img src="./icon-8.png" class="img-fluid features-img-edit-4" alt="">
 
               <div class="ps-4 ps-4-1">
                 <h5>24/7 Support</h5>
