--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="./style.css">
 
     <!-- icons link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -23,14 +23,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid pe-4 ps-4">
-          <a class="navbar-brand" href="#"> <img src="../static/icon-1.png" class="img-fluid img-nav-edit" alt="">CryptoCoin</a>
+          <a class="navbar-brand" href="#"> <img src="./icon-1.png" class="img-fluid img-nav-edit" alt="">CryptoCoin</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto gap-3 mb-2 mb-lg-0">
               <li class="nav-item ">
-                <a class="nav-link active" aria-current="page" href="ninestars.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
 
               <li class="nav-item">
@@ -80,7 +80,7 @@
                 <div class="col-md-6 col-12" id="about-section-1-c2">
 
                     <img data-aos="fade-down"
-                    data-aos-duration="2000" src="../static/hero-2.png" class="img-fluid" alt="">
+                    data-aos-duration="2000" src="./hero-2.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -108,7 +108,7 @@
               <div data-aos="fade-up"
               data-aos-duration="500" class="card card-edit">
                 <div class="card-body">
-                  <img src="../static/icon-7.png" class="img-fluid services-img-edit" alt="">
+                  <img src="./icon-7.png" class="img-fluid services-img-edit" alt="">
                   <h5 class="card-title text-1">Currency Wallet</h5>
                   <p class="card-text par-1">Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
                   <a href="#" class="btn btn-services-edit">Read More <i class="bi bi-arrow-right-short"></i></a>
@@ -120,7 +120,7 @@
               <div data-aos="fade-up"
               data-aos-duration="1000" class="card card-edit">
                 <div class="card-body">
-                  <img src="../static/icon-3.png" class="img-fluid services-img-edit" alt="">
+                  <img src="./icon-3.png" class="img-fluid services-img-edit" alt="">
                   <h5 class="card-title text-1">Currency Transaction</h5>
                   <p class="card-text par-1">Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
                   <a href="#" class="btn btn-services-edit">Read More <i class="bi bi-arrow-right-short"></i></a>
@@ -133,7 +133,7 @@
               <div data-aos="fade-up"
               data-aos-duration="1500" class="card card-edit">
                 <div class="card-body">
-                  <img src="../static/icon-9.png" class="img-fluid services-img-edit" alt="">
+                  <img src="./icon-9.png" class="img-fluid services-img-edit" alt="">
                   <h5 class="card-title text-1">Bitcoin Investment</h5>
                   <p class="card-text par-1">Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
                   <a href="#" class="btn btn-services-edit">Read More <i class="bi bi-arrow-right-short"></i></a>
@@ -145,7 +145,7 @@
               <div data-aos="fade-up"
               data-aos-duration="2000" class="card card-edit">
                 <div class="card-body">
-                  <img src="../static/icon-5.png" class="img-fluid services-img-edit" alt="">
+                  <img src="./icon-5.png" class="img-fluid services-img-edit" alt="">
                   <h5 class="card-title text-1">Currency Exchange</h5>
                   <p class="card-text par-1">Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
                   <a href="#" class="btn btn-services-edit">Read More <i class="bi bi-arrow-right-short"></i></a>
@@ -157,7 +157,7 @@
               <div data-aos="fade-up"
               data-aos-duration="2500" class="card card-edit">
                 <div class="card-body">
-                  <img src="../static/icon-2.png" class="img-fluid services-img-edit" alt="">
+                  <img src="./icon-2.png" class="img-fluid services-img-edit" alt="">
                   <h5 class="card-title text-1">Bitcoin Escrow</h5>
                   <p class="card-text par-1">Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
                   <a href="#" class="btn btn-services-edit">Read More <i class="bi bi-arrow-right-short"></i></a>
@@ -169,7 +169,7 @@
               <div data-aos="fade-up"
               data-aos-duration="3000" class="card card-edit">
                 <div class="card-body">
-                  <img src="../static/icon-8 (1).png" class="img-fluid services-img-edit" alt="">
+                  <img src="./icon-8 (1).png" class="img-fluid services-img-edit" alt="">
                   <h5 class="card-title text-1">Token Sale</h5>
                   <p class="card-text par-1">Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
                   <a href="#" class="btn btn-services-edit">Read More <i class="bi bi-arrow-right-short"></i></a>
