--- a/token.html
+++ b/token.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="./style.css">
 
     <!-- icons link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -19,14 +19,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid pe-4 ps-4">
-          <a class="navbar-brand" href="#"> <img src="../static/icon-1.png" class="img-fluid img-nav-edit" alt="">CryptoCoin</a>
+          <a class="navbar-brand" href="#"> <img src="./icon-1.png" class="img-fluid img-nav-edit" alt="">CryptoCoin</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto gap-3 mb-2 mb-lg-0">
               <li class="nav-item ">
-                <a class="nav-link active" aria-current="page" href="ninestars.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
 
               <li class="nav-item">
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-6 col-12" id="about-section-1-c2">
 
-                    <img src="../static/hero-2.png" class="img-fluid" alt="">
+                    <img src="./hero-2.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -138,10 +138,10 @@
               </div>
 
               <div class="col-12">
-                <img src="../static/payment-1.png" class="img-fluid img-token-edit" alt="">
-                <img src="../static/payment-2.png" class="img-fluid img-token-edit" alt="">
-                <img src="../static/payment-3.png" class="img-fluid img-token-edit" alt="">
-                <img src="../static/payment-4.png" class="img-fluid img-token-edit" alt="">
+                <img src="./payment-1.png" class="img-fluid img-token-edit" alt="">
+                <img src="./payment-2.png" class="img-fluid img-token-edit" alt="">
+                <img src="./payment-3.png" class="img-fluid img-token-edit" alt="">
+                <img src="./payment-4.png" class="img-fluid img-token-edit" alt="">
               </div>
               
             </div>
